; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_edit.c_ins_compl_delete.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_edit.c_ins_compl_delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@compl_col = common dso_local global i32 0, align 4
@compl_cont_status = common dso_local global i32 0, align 4
@CONT_ADDING = common dso_local global i32 0, align 4
@compl_length = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ins_compl_delete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ins_compl_delete() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @compl_col, align 4
  %3 = load i32, i32* @compl_cont_status, align 4
  %4 = load i32, i32* @CONT_ADDING, align 4
  %5 = and i32 %3, %4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = load i32, i32* @compl_length, align 4
  br label %10

9:                                                ; preds = %0
  br label %10

10:                                               ; preds = %9, %7
  %11 = phi i32 [ %8, %7 ], [ 0, %9 ]
  %12 = add nsw i32 %2, %11
  store i32 %12, i32* %1, align 4
  %13 = load i32, i32* %1, align 4
  %14 = call i32 @backspace_until_column(i32 %13)
  %15 = call i32 (...) @changed_cline_bef_curs()
  ret void
}

declare dso_local i32 @backspace_until_column(i32) #1

declare dso_local i32 @changed_cline_bef_curs(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
